Добавление кнопки btn-back

--- a/registration.html
+++ b/registration.html
@@ -21,6 +21,7 @@
     <div class="container">
 
       <header class="enter__header">
+        <a href="sign-up.html" class="btn-back"></a>
         <h1 class="title welcome">Welcome</h1>
         <h2 class="subtitle">Please provide following details for your new account</h2>
       </header>
