Добавлены страницы sign-in и forgot-password

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -4,25 +4,48 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3">
-  <meta name="description" content="Partido | Sigh Up">
+  <meta name="description" content="Partido | Forgot Password">
   <meta property="og:title" content="Partido">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.partido.pp.ua/">
   <meta property="og:image" content="https://www.partido.pp.ua/images/logo.webp">
-  <meta property="og:site_name" content="Partido | Sigh Up">
-  <title>Partido | Sigh Up</title>
+  <meta property="og:site_name" content="Partido | Forgot Password">
+  <title>Partido | Forgot Password</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/app.min.css">
 </head>
 
 <body>
 
-  <ol class="index-pages">
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-    <li><a href=""></a></li>
-  </ol>
+  <div class="enter forgot-password">
+    <div class="container">
+
+      <header class="enter__header">
+        <h1 class="title welcome">Forgot Password?</h1>
+        <h2 class="subtitle">Please enter your email address below and we will send you a link to reset your password</h2>
+      </header>
+
+      <main class="enter__main">
+        <form class="forgot-password-form" action="" method="post">
+
+          <label>
+            <div class="error">
+              <span class="error__message active">Error message</span>
+              <span class="error__message">Такой почты не существует</span>
+            </div>
+            <input type="email" name="email" placeholder="Email">
+          </label>
+
+          <button class="btn btn-blue" type="submit">Sign in</button>
+          
+          <div class="back-link">
+            <a href="sign-in.html">Go back!</a>
+          </div>
+        </form>
+      </main>
+
+    </div>
+  </div>
 
 </body>
 <script src="libs/jquery/dist/jquery.min.js"></script>
