--- a/registration.html
+++ b/registration.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <div class="enter">
+  <div class="enter registration">
     <div class="container">
 
       <header class="enter__header">
@@ -27,54 +27,52 @@
       </header>
 
       <main class="enter__main">
-        <section class="registration">
-          <form class="registration-form" action="" method="post">
+        <form class="registration-form" action="" method="post">
 
-            <label>
-              <div class="error">
-                <span class="error__message">Error message</span>
-              </div>
-              <input type="text" name="name" placeholder="Full name">
-            </label>
-            <label>
-              <div class="error">
-                <span class="error__message active">Error message</span>
-                <span class="error__message">Такой почты не существует</span>
-              </div>
-              <input type="email" name="email" placeholder="Email">
-            </label>
-            <label>
-              <div class="error">
-                <span class="error__message">Error message</span>
-              </div>
-              <input type="tel" name="phone" placeholder="Phone number">
-            </label>
-            <label class="password">
-              <div class="error">
-                <span class="error__message">Error message</span>
-              </div>
-              <input type="password" name="password" placeholder="Password">
-              <button class="password-control"></button>
-            </label>
-            <label class="password">
-              <div class="error">
-                <span class="error__message">Error message</span>
-              </div>
-              <input type="password" name="password" placeholder="Confirm password">
-              <button class="password-control"></button>
-            </label>
-
-            <div class="chbx-wrapper">
-              <label class="chbx">
-                <input type="checkbox" name="chbx">
-                <span></span>
-              </label>
-              <p>By creating account, you agree to our <a href="#">terms and conditions</a> and <a href="#">privacy policy</a></p>
+          <label>
+            <div class="error">
+              <span class="error__message">Error message</span>
             </div>
+            <input type="text" name="name" placeholder="Full name">
+          </label>
+          <label>
+            <div class="error">
+              <span class="error__message active">Error message</span>
+              <span class="error__message">Такой почты не существует</span>
+            </div>
+            <input type="email" name="email" placeholder="Email">
+          </label>
+          <label>
+            <div class="error">
+              <span class="error__message">Error message</span>
+            </div>
+            <input type="tel" name="phone" placeholder="Phone number">
+          </label>
+          <label class="password">
+            <div class="error">
+              <span class="error__message">Error message</span>
+            </div>
+            <input type="password" name="password" placeholder="Password">
+            <button class="password-control"></button>
+          </label>
+          <label class="password">
+            <div class="error">
+              <span class="error__message">Error message</span>
+            </div>
+            <input type="password" name="password" placeholder="Confirm password">
+            <button class="password-control"></button>
+          </label>
 
-            <button class="btn btn-blue" type="submit">Sign in</button>
-          </form>
-        </section>
+          <div class="chbx-wrapper">
+            <label class="chbx">
+              <input type="checkbox" name="chbx">
+              <span></span>
+            </label>
+            <p>By creating account, you agree to our <a href="#">terms and conditions</a> and <a href="#">privacy policy</a></p>
+          </div>
+
+          <button class="btn btn-blue" type="submit">Sign in</button>
+        </form>
       </main>
 
     </div>
