Исправление обертки input, добавлен .input-box

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -28,13 +28,13 @@
       <main class="enter__main">
         <form class="forgot-password-form" action="" method="post">
 
-          <label>
-            <div class="error">
-              <span class="error__message active">Error message</span>
-              <span class="error__message">Такой почты не существует</span>
-            </div>
-            <input type="email" name="email" placeholder="Email">
-          </label>
+          <div class="input-box">
+            <span class="error active">Error message</span>
+            <span class="error">Такой почты не существует</span>
+            <label>
+              <input type="email" name="email" placeholder="Your Email">
+            </label>
+          </div>
 
           <button class="btn btn-blue" type="submit">Sign in</button>
           
