--- a/registration.html
+++ b/registration.html
@@ -29,46 +29,53 @@
       <main class="enter__main">
         <form class="registration-form" action="" method="post">
 
-          <label>
-            <div class="error">
-              <span class="error__message">Error message</span>
-            </div>
-            <input type="text" name="name" placeholder="Full name">
-          </label>
-          <label>
-            <div class="error">
-              <span class="error__message active">Error message</span>
-              <span class="error__message">Такой почты не существует</span>
-            </div>
-            <input type="email" name="email" placeholder="Email">
-          </label>
-          <label>
-            <div class="error">
-              <span class="error__message">Error message</span>
-            </div>
-            <input type="tel" name="phone" placeholder="Phone number">
-          </label>
-          <label class="password">
-            <div class="error">
-              <span class="error__message">Error message</span>
-            </div>
-            <input type="password" name="password" placeholder="Password">
-            <button class="password-control"></button>
-          </label>
-          <label class="password">
-            <div class="error">
-              <span class="error__message">Error message</span>
-            </div>
-            <input type="password" name="password" placeholder="Confirm password">
-            <button class="password-control"></button>
-          </label>
-
-          <div class="chbx-wrapper">
-            <label class="chbx">
-              <input type="checkbox" name="chbx">
-              <span></span>
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <label>
+              <input type="text" name="name" placeholder="Full name">
             </label>
-            <p>By creating account, you agree to our <a href="#">terms and conditions</a> and <a href="#">privacy policy</a></p>
+          </div>
+
+          <div class="input-box">
+            <span class="error active">Error message</span>
+            <span class="error">Такой почты не существует</span>
+            <label>
+              <input type="email" name="email" placeholder="Email">
+            </label>
+          </div>
+          
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <label>
+              <input type="tel" name="phone" placeholder="Phone number">
+            </label>
+          </div>
+
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <label class="password">
+              <input type="password" name="password" placeholder="Password">
+              <button class="password-control"></button>
+            </label>
+          </div>
+
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <label class="password">
+              <input type="password" name="password" placeholder="Confirm password">
+              <button class="password-control"></button>
+            </label>
+          </div>
+
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <div class="chbx-wrapper">
+              <label class="chbx">
+                <input type="checkbox" name="chbx">
+                <span></span>
+              </label>
+              <p>By creating account, you agree to our <a href="#">terms and conditions</a> and <a href="#">privacy policy</a></p>
+            </div>
           </div>
 
           <button class="btn btn-blue" type="submit">Sign in</button>
