--- a/sign-in.html
+++ b/sign-in.html
@@ -32,23 +32,26 @@
       <main class="enter__main">
         <form class="sign-in-form" action="" method="post">
 
-          <label>
-            <div class="error">
-              <span class="error__message active">Error message</span>
-              <span class="error__message">Такой почты не существует</span>
-            </div>
-            <input type="text" name="email-or-phone" placeholder="Email or phone number">
-          </label>
-          <label class="password">
-            <div class="error">
-              <span class="error__message">Error message</span>
-            </div>
-            <input type="password" name="password" placeholder="Password">
-            <button class="password-control"></button>
-          </label>
+          <div class="input-box">
+            <span class="error active">Error message</span>
+            <span class="error">Такой почты не существует</span>
+            <label>
+              <input type="text" name="email-or-phone" placeholder="Email or phone number">
+            </label>
+          </div>
+
+          <div class="input-box">
+            <span class="error">Error message</span>
+            <label class="password">
+              <input type="password" name="password" placeholder="Password">
+              <button class="password-control"></button>
+            </label>
+          </div>
+
           <div class="forget">
             <a class="forget__link" href="forgot-password.html">Forgot password?</a>
           </div>
+
           <button class="btn btn-blue" type="submit">Sign in</button>
         </form>
 
