--- a/forgot-password.html
+++ b/forgot-password.html
@@ -26,11 +26,11 @@
       </header>
 
       <main class="enter__main">
-        <form class="forgot-password-form" action="" method="post">
+        <form class="forgot-password-form" action="" method="post" novalidate>
 
           <div class="input-box">
-            <span class="error active">Error message</span>
-            <span class="error">Такой почты не существует</span>
+            <span class="error active" aria-live>Error message</span>
+            <span class="error" aria-live>Такой почты не существует</span>
             <label>
               <input type="email" name="email" placeholder="Your Email">
             </label>
