--- a/registration.html
+++ b/registration.html
@@ -27,51 +27,51 @@
       </header>
 
       <main class="enter__main">
-        <form class="registration-form" action="" method="post">
+        <form class="registration-form" action="" method="post" novalidate>
 
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <label>
-              <input type="text" name="name" placeholder="Full name">
+              <input type="text" name="name" placeholder="Full name" required>
             </label>
           </div>
 
           <div class="input-box">
-            <span class="error active">Error message</span>
-            <span class="error">Такой почты не существует</span>
+            <span class="error active" aria-live>Error message</span>
+            <span class="error" aria-live>Такой почты не существует</span>
             <label>
-              <input type="email" name="email" placeholder="Email">
+              <input class="invalid" type="email" name="email" placeholder="Email" required>
             </label>
           </div>
           
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <label>
-              <input type="tel" name="phone" placeholder="Phone number">
+              <input class="valid" type="tel" name="phone" placeholder="Phone number" pattern="+[0-9]{3}-[0-9]{2}-[0-9]{7}"required>
             </label>
           </div>
 
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <label class="password">
-              <input type="password" name="password" placeholder="Password">
+              <input type="password" name="password" placeholder="Password" required>
               <button class="password-control"></button>
             </label>
           </div>
 
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <label class="password">
-              <input type="password" name="password" placeholder="Confirm password">
+              <input type="password" name="password" placeholder="Confirm password" required>
               <button class="password-control"></button>
             </label>
           </div>
 
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <div class="chbx-wrapper">
-              <label class="chbx">
-                <input type="checkbox" name="chbx">
+              <label class="chbx chbx--error">
+                <input type="checkbox" name="chbx" required>
                 <span></span>
               </label>
               <p>By creating account, you agree to our <a href="#">terms and conditions</a> and <a href="#">privacy policy</a></p>
