--- a/sign-in.html
+++ b/sign-in.html
@@ -30,18 +30,18 @@
       </header>
 
       <main class="enter__main">
-        <form class="sign-in-form" action="" method="post">
+        <form class="sign-in-form" action="" method="post" novalidate>
 
           <div class="input-box">
-            <span class="error active">Error message</span>
-            <span class="error">Такой почты не существует</span>
+            <span class="error active" aria-live>Error message</span>
+            <span class="error" aria-live>Такой почты не существует</span>
             <label>
               <input type="text" name="email-or-phone" placeholder="Email or phone number">
             </label>
           </div>
 
           <div class="input-box">
-            <span class="error">Error message</span>
+            <span class="error" aria-live>Error message</span>
             <label class="password">
               <input type="password" name="password" placeholder="Password">
               <button class="password-control"></button>
