--- a/index.html
+++ b/index.html
@@ -4,25 +4,70 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3">
-  <meta name="description" content="Partido | Sigh Up">
+  <meta name="description" content="Partido | Index">
   <meta property="og:title" content="Partido">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.partido.pp.ua/">
   <meta property="og:image" content="https://www.partido.pp.ua/images/logo.webp">
-  <meta property="og:site_name" content="Partido | Sigh Up">
-  <title>Partido | Sigh Up</title>
+  <meta property="og:site_name" content="Partido | Index">
+  <title>Partido | Index</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/app.min.css">
-</head>
 
+  <style>
+    .index-pages {
+      width: 100%;
+      display: flex;
+      align-items: start;
+      /* justify-content: space-evenly; */
+      flex-flow: wrap;
+      gap: 20px;
+    }
+    .pages-box {
+      width: auto;
+      min-width: 250px;
+    }
+    .pages-box h2 {
+      width: 100%;
+      padding: 10px 20px;
+      font-size: 20px;
+      line-height: 1;
+      background: #4276FF;
+      color: #fff;
+      border-radius: 12px;
+    }
+    .pages-box ol {
+
+    }
+  </style>
+</head>
 <body>
 
-  <ol class="index-pages">
-    <li><a href="sign-up.html">sign-up</a></li>
-    <li><a href="registration.html">registration</a></li>
-    <li><a href="sign-in.html">sign-in</a></li>
-    <li><a href="forgot-password.html">forgot-password</a></li>
-  </ol>
+  <div class="enter">
+    <div class="container">
+      <header class="enter__header">
+        <div class="logo">
+          <img class="logo__images" src="images/logo.png" alt="logo">
+          <span class="logo__name">Partido</span>
+        </div>
+      </header>
+    </div>
+  </div>
+
+  <div class="container">
+    <main class="index-pages">
+      <div class="pages-box">
+        <h2>Sign up and Log in</h2>
+        <ol>
+          <li><a href="sign-up.html">sign-up</a></li>
+          <li><a href="registration.html">registration</a></li>
+          <li><a href="sign-in.html">sign-in</a></li>
+          <li><a href="forgot-password.html">forgot-password</a></li>
+        </ol>
+      </div>
+    </main>
+  </div>
+
 
 </body>
 <script src="libs/jquery/dist/jquery.min.js"></script>
