--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
       color: #fff;
       border-radius: 12px;
     }
-    .pages-box ol {
+    /* .pages-box ol {
 
+    } */
+    @media (max-width: 500px) {
+      .pages-box {
+        width: 100%;
+      }
     }
   </style>
 </head>
