--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     .pages-box h2 {
       width: 100%;
       padding: 10px 20px;
+      margin-top: 0;
       font-size: 20px;
       line-height: 1;
       background: #4276FF;
