Правки Index и добавление ссылки в logo

--- a/sign-in.html
+++ b/sign-in.html
@@ -21,10 +21,10 @@
     <div class="container">
 
       <header class="enter__header">
-        <div class="logo">
+        <a class="logo" href="index.html">
           <img class="logo__images" src="images/logo.png" alt="logo">
           <span class="logo__name">Partido</span>
-        </div>
+        </a>
         <h1 class="title">Sign In</h1>
         <h2 class="subtitle">Please sign in to continue</h2>
       </header>
