Добавление старого варианта error

--- a/sign-in.html
+++ b/sign-in.html
@@ -34,12 +34,14 @@
           <span class="error active" aria-live>Error message</span>
 
           <div class="input-box">
+            <span class="error-inner active" aria-live>Error message</span>
             <label>
               <input type="text" name="email-or-phone" placeholder="Email or phone number">
             </label>
           </div>
 
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <label class="password">
               <input type="password" name="password" placeholder="Password">
               <button class="password-control"></button>
