--- a/registration.html
+++ b/registration.html
@@ -31,24 +31,28 @@
           <span class="error active" aria-live>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam vitae donec mi vel curabitur euismod sed.</span>
 
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <label>
               <input type="text" name="name" placeholder="Full name" required>
             </label>
           </div>
 
           <div class="input-box">
+            <span class="error-inner active" aria-live>Error message</span>
             <label>
               <input class="invalid" type="email" name="email" placeholder="Email" required>
             </label>
           </div>
           
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <label>
               <input class="valid" type="tel" name="phone" placeholder="Phone number" pattern="+[0-9]{3}-[0-9]{2}-[0-9]{7}"required>
             </label>
           </div>
 
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <label class="password">
               <input type="password" name="password" placeholder="Password" required>
               <button class="password-control"></button>
@@ -56,6 +60,7 @@
           </div>
 
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <label class="password">
               <input type="password" name="password" placeholder="Confirm password" required>
               <button class="password-control"></button>
@@ -63,6 +68,7 @@
           </div>
 
           <div class="input-box">
+            <span class="error-inner" aria-live>Error message</span>
             <div class="chbx-wrapper">
               <label class="chbx chbx--error">
                 <input type="checkbox" name="chbx" required>
