--- a/registration.html
+++ b/registration.html
@@ -70,7 +70,7 @@
           <div class="input-box">
             <span class="error-inner" aria-live>Error message</span>
             <div class="chbx-wrapper">
-              <label class="chbx chbx--error">
+              <label class="chbx invalid">
                 <input type="checkbox" name="chbx" required>
                 <span></span>
               </label>
