--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
   <div class="container">
     <main class="index-pages">
+
       <div class="pages-box">
         <h2>Sign up and Log in</h2>
         <ol>
@@ -71,6 +72,14 @@
           <li><a href="forgot-password.html">forgot-password</a></li>
         </ol>
       </div>
+
+      <div class="pages-box">
+        <h2>Room creating</h2>
+        <ol>
+          <li><a href="room-create.html">room-create</a></li>
+        </ol>
+      </div>
+
     </main>
   </div>
 
