Добавление страницы room-create-name

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <ol>
           <li><a href="room-create.html">room-create</a></li>
         </ol>
+        <ol>
+          <li><a href="room-create-name.html">room-create-name</a></li>
+        </ol>
       </div>
 
     </main>
