Добавление страницы home

--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
         </ol>
       </div>
 
+      <div class="pages-box">
+        <h2>Home page | Feed | Search</h2>
+        <ol>
+          <li><a href="home-feed.html">home-feed</a></li>
+        </ol>
+      </div>
+
     </main>
   </div>
 
